--- a/feedback.html
+++ b/feedback.html
@@ -138,9 +138,9 @@
 
         <div class="feedback-page">
             <div class="feedback-page_wrap">
-                <h2 class="green" data-aos="fade-right" data-aos-duration="500" data-aos-offset="200">Отзывы о школе английского языка <span class="orange">Smart Education</span></h2>
+                <h2 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="500" data-aos-offset="200">Отзывы о школе английского языка <span class="orange">Smart Education</span></h2>
                 <div class="feedback-page-list">
-                    <div class="feedback-page-item" data-aos="fade-up" data-aos-duration="500" data-aos-offset="200">
+                    <div class="feedback-page-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="500" data-aos-offset="200">
                         <div class="feedback-page-image"><img src="./assets/image/home/feedback/1.png" /></div>
                         <div class="feedback-page-text">
                             <p>Smart Education - школа с отменной репутацией.
@@ -160,7 +160,7 @@
                             <span>филиал Митинский, Москва</span>
                         </div>
                     </div>
-                    <div class="feedback-page-item" data-aos="fade-up" data-aos-duration="500" data-aos-offset="200">
+                    <div class="feedback-page-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="500" data-aos-offset="200">
                         <div class="feedback-page-image"><img src="./assets/image/home/feedback/2.png" /></div>
                         <div class="feedback-page-text">
                             <p>Smart Education - школа с отменной репутацией.
@@ -180,7 +180,7 @@
                             <span>филиал Митинский, Москва</span>
                         </div>
                     </div>
-                    <div class="feedback-page-item" data-aos="fade-up" data-aos-duration="500" data-aos-offset="200">
+                    <div class="feedback-page-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="500" data-aos-offset="200">
                         <div class="feedback-page-image"><img src="./assets/image/home/feedback/3.png" /></div>
                         <div class="feedback-page-text">
                             <p>Smart Education - школа с отменной репутацией.
@@ -200,7 +200,7 @@
                             <span>филиал Митинский, Москва</span>
                         </div>
                     </div>
-                    <div class="feedback-page-item" data-aos="fade-up" data-aos-duration="500" data-aos-offset="200">
+                    <div class="feedback-page-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="500" data-aos-offset="200">
                         <div class="feedback-page-image"><img src="./assets/image/home/feedback/4.png" /></div>
                         <div class="feedback-page-text">
                             <p>Smart Education - школа с отменной репутацией.
