--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
                 <div>
                     <div class="course-name_wrap">
                         <div class="course-name-desc" >
-                            <h1 class="green" data-aos="fade-right" data-aos-duration="1000">АНГЛИЙСКИЙ ДЛЯ ДЕТЕЙ И ПОДРОСТКОВ</h1>
-                            <h2 class="orange" data-aos="fade-right" data-aos-duration="1500">по методике Кембриджского Университета</h2>
+                            <h1 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000">АНГЛИЙСКИЙ ДЛЯ ДЕТЕЙ И ПОДРОСТКОВ</h1>
+                            <h2 class="orange" data-aos="fade-right" data-aos-once="true" data-aos-duration="1500">по методике Кембриджского Университета</h2>
                             <p>Скидка 10% до 31 августа 2020 года</p>
-                            <p><a meta-item="toFirst" class="button_green">Отправить заявку</a></p>
+                            <p><a meta-item="toFirst" class="button_orange_full">Отправить заявку</a> <a meta-item="toFirst" class="button_green">Подробнее</a></p>
                         </div>
                         <div class="course-name-img">
                             <picture>
@@ -159,10 +159,10 @@
                 <div>
                     <div class="course-name_wrap">
                         <div class="course-name-desc" >
-                            <h1 class="green" data-aos="fade-right" data-aos-duration="1000">АНГЛИЙСКИЙ ДЛЯ ДЕТЕЙ И ПОДРОСТКОВ</h1>
-                            <h2 class="orange" data-aos="fade-right" data-aos-duration="1500">по методике Кембриджского Университета</h2>
+                            <h1 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000">АНГЛИЙСКИЙ ДЛЯ ДЕТЕЙ И ПОДРОСТКОВ</h1>
+                            <h2 class="orange" data-aos="fade-right" data-aos-once="true" data-aos-duration="1500">по методике Кембриджского Университета</h2>
                             <p>Скидка 10% до 31 августа 2020 года</p>
-                            <p><a meta-item="toFirst" class="button_green">Отправить заявку</a></p>
+                            <p><a meta-item="toFirst" class="button_orange_full">Отправить заявку</a> <a meta-item="toFirst" class="button_green">Подробнее</a></p>
                         </div>
                         <div class="course-name-img">
                             <picture>
@@ -180,16 +180,16 @@
         <!-- Fast menu-->
         <div class="fast-menu">
             <div class="fast-menu_wrap">
-                <div class="red_bg" data-aos="fade-up" data-aos-duration="700" data-aos-offset="200"> 
+                <div class="red_bg" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200"> 
                     <a href="/10/deti/deti-4-6-let/">Английский для детей 3-17 лет</a>
                 </div>
-                <div class="green_bg" data-aos="fade-up" data-aos-duration="1400" data-aos-offset="200">
+                <div class="green_bg" data-aos="fade-up" data-aos-once="true" data-aos-duration="1400" data-aos-offset="200">
                     <a href="/10/vzroslye/razgovornyj-anglijskij/">Разговорный английский</a>
                 </div>
-                <div class="blue_bg" data-aos="fade-up" data-aos-duration="700" data-aos-offset="200">
+                <div class="blue_bg" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">
                     <a href="/0/deti/mezhdunarodnye-ekzameny/">Английский онлайн</a>
                 </div>
-                <div class="orange_bg" data-aos="fade-up" data-aos-duration="1400" data-aos-offset="200">
+                <div class="orange_bg" data-aos="fade-up" data-aos-once="true" data-aos-duration="1400" data-aos-offset="200">
                     <a href="/10/vzroslye/12-dnevnyj-kurs-intensiv-razgovornogo-yazyka/">Международные экзамены</a>
                 </div>
             </div>
@@ -198,16 +198,16 @@
         <!-- Homepage sign course -->
         <div class="home-sign"> 
             <div class="home-sign_wrap">
-                <h2 class="green" data-aos="fade-right" data-aos-offset="200">Запишись на <span class="red">бесплатный</span> открытый урок!</h2>
+                <h2 class="green" data-aos="fade-right" data-aos-once="true" data-aos-offset="200">Запишись на <span class="red">бесплатный</span><br />открытый урок!</h2>
                 <ul>
-                    <li data-aos="fade-up" data-aos-offset="200" data-aos-duration="500"><span>1</span>Определим уровень знания языка</li>
-                    <li data-aos="fade-up" data-aos-offset="200" data-aos-duration="800" ><span>2</span>Составим программу обучения с учетом интересов и целей</li>
-                    <li data-aos="fade-up" data-aos-offset="200" data-aos-duration="1200"><span>3</span>Продемонстрируем методику Кембриджского университета</li>
-                    <li data-aos="fade-up" data-aos-offset="200" data-aos-duration="1500"><span>4</span>Познакомим с группой и преподавателем</li>
+                    <li data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="500"><span>1</span>Определим уровень знания языка</li>
+                    <li data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="800" ><span>2</span>Составим программу обучения с учетом интересов и целей</li>
+                    <li data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1200"><span>3</span>Продемонстрируем методику Кембриджского университета</li>
+                    <li data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1500"><span>4</span>Познакомим с группой и преподавателем</li>
                 </ul>
                 <div class="home-sign-filial">
                     <div class="moscow">
-                        <div class="home-sign-item " data-aos="fade-up" data-aos-offset="200">
+                        <div class="home-sign-item " data-aos="fade-up" data-aos-once="true" data-aos-offset="200">
                             <div class="home-sign-item-photo cher"></div>
                             <div class="home-sign-item-text">
                                 <h4>Филиал <span>Черемушки</span></h4>
@@ -216,7 +216,7 @@
                         </div>
                     </div>
                     <div class="moscow">
-                        <div class="home-sign-item " data-aos="fade-up" data-aos-offset="200">
+                        <div class="home-sign-item " data-aos="fade-up" data-aos-once="true" data-aos-offset="200">
                             <div class="home-sign-item-photo mit"></div>
                             <div class="home-sign-item-text">
                                 <h4>Филиал <span>Митинский</span></h4>
@@ -226,7 +226,7 @@
                     </div>
 
                     <div class="novgorod">
-                        <div class="home-sign-item " data-aos="fade-up" data-aos-offset="200">
+                        <div class="home-sign-item " data-aos="fade-up" data-aos-once="true" data-aos-offset="200">
                             <div class="home-sign-item-photo gor"></div>
                             <div class="home-sign-item-text">
                                 <h4>Филиал <span>Горьковский</span></h4>
@@ -235,7 +235,7 @@
                         </div>
                     </div>
                     <div class="novgorod">
-                        <div class="home-sign-item " data-aos="fade-up" data-aos-offset="200">
+                        <div class="home-sign-item " data-aos="fade-up" data-aos-once="true" data-aos-offset="200">
                             <div class="home-sign-item-photo len"></div>
                             <div class="home-sign-item-text">
                                 <h4>Филиал <span>Ленинский</span></h4>
@@ -252,26 +252,26 @@
             <div class="home-teacher-wrap">
                 <h2 class="green">Преподаватели</h2>
                 <div class="home-teacher-slider">
-                    <div class="home-teacher-item" data-aos="fade-up" data-aos-offset="200" data-aos-duration="500">
+                    <div class="home-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="500">
                         <img src="./assets/image/home/teacher/1.png" />
                         <h4 class="red">ЯНА НЕМЧИНОВА</h4>
                         <p>Исполнительный директор
                             Smart Education</p>
                     </div>
-                    <div class="home-teacher-item" data-aos="fade-up" data-aos-offset="200" data-aos-duration="800">
+                    <div class="home-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="800">
                         <img src="./assets/image/home/teacher/2.png" />
                         <h4 class="red">Мария суетнова</h4>
                         <p>Преподаватель,
                             филиал Митинский, г. Москва
                             </p>
                     </div>
-                    <div class="home-teacher-item" data-aos="fade-up" data-aos-offset="200" data-aos-duration="1200">
+                    <div class="home-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1200">
                         <img src="./assets/image/home/teacher/3.png" />
                         <h4 class="red">карина мамонова</h4>
                         <p>Преподаватель,
                             филиал Митинский, г. Москва</p>
                     </div>
-                    <div class="home-teacher-item" data-aos="fade-up" data-aos-offset="200" data-aos-duration="1500">
+                    <div class="home-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1500">
                         <img src="./assets/image/home/teacher/4.png" />
                         <h4 class="red">Анастасия сёмина</h4>
                         <p>Преподаватель,
@@ -299,7 +299,7 @@
             <div class="home-news_wrap">
                 <h2 class="green">Новости</h2>
                 <div class="home-news-items">
-                    <div class="home-news-item" data-aos="fade-up" data-aos-duration="500" data-aos-offset="200">
+                    <div class="home-news-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="500" data-aos-offset="200">
                         <a href="#">
                             <div class="home-news-item_img">
                                 <img src="./assets/image/home/news/1.png" />
@@ -312,7 +312,7 @@
                         </a>
                     </div>
 
-                    <div class="home-news-item" data-aos="fade-up" data-aos-duration="800" data-aos-offset="200">
+                    <div class="home-news-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="800" data-aos-offset="200">
                         <a href="#">
                             <div class="home-news-item_img">
                                 <img src="./assets/image/home/news/2.png" />
@@ -325,7 +325,7 @@
                         </a>
                     </div>
 
-                    <div class="home-news-item" data-aos="fade-up" data-aos-duration="1200" data-aos-offset="200">
+                    <div class="home-news-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1200" data-aos-offset="200">
                         <a href="#">
                             <div class="home-news-item_img">
                                 <img src="./assets/image/home/news/3.png" />
@@ -361,7 +361,7 @@
             <div class="home-stocks_wrap">
                 <h2 class="green">Акции</h2>
                 <div class="home-stocks-items">
-                    <div class="home-stocks-item" data-aos="fade-up" data-aos-duration="700" data-aos-offset="200">
+                    <div class="home-stocks-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">
                         <a href="#">
                             <div class="home-stock-img">
                                 <img src="./assets/image/home/stocks/1.png" />
@@ -374,7 +374,7 @@
                         </a>
                     </div>
 
-                    <div class="home-stocks-item" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
+                    <div class="home-stocks-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1000" data-aos-offset="200">
                         <a href="#">
                             <div class="home-stock-img">
                                 <img src="./assets/image/home/stocks/1.png" />
@@ -396,9 +396,9 @@
         <!-- Homepage feedback-->
         <div class="home-feedback">
             <div class="home-feedback_wrap">
-                <h2 class="green" data-aos="fade-right" data-aos-offset="200">Отзывы выпускников курса</h2>
+                <h2 class="green" data-aos="fade-right" data-aos-once="true" data-aos-offset="200">Отзывы выпускников курса</h2>
                 <div class="home-feedback-items">
-                    <div class="home-feedback-item" data-aos="fade-up" data-aos-duration="700" data-aos-offset="200">
+                    <div class="home-feedback-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">
                         <div class="home-feedback-ava">
                             <img src="./assets/image/home/feedback/1.png" />
                         </div>
@@ -412,7 +412,7 @@
                         </div>
                     </div>
 
-                    <div class="home-feedback-item" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
+                    <div class="home-feedback-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1000" data-aos-offset="200">
                         <div class="home-feedback-ava">
                             <img src="./assets/image/home/feedback/2.png" />
                         </div>
@@ -426,7 +426,7 @@
                         </div>
                     </div>
 
-                    <div class="home-feedback-item" data-aos="fade-up" data-aos-duration="700" data-aos-offset="200">
+                    <div class="home-feedback-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">
                         <div class="home-feedback-ava">
                             <img src="./assets/image/home/feedback/3.png" />
                         </div>
@@ -440,7 +440,7 @@
                         </div>
                     </div>
 
-                    <div class="home-feedback-item" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
+                    <div class="home-feedback-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1000" data-aos-offset="200">
                         <div class="home-feedback-ava">
                             <img src="./assets/image/home/feedback/4.png" />
                         </div>
