--- a/inside_news.html
+++ b/inside_news.html
@@ -138,7 +138,7 @@
 
         <div class="news-page">
             <div class="news-page_wrap inside">
-               <div class="news-page-image" data-aos="fade-up" data-aos-duration="500" data-aos-offset="200">
+               <div class="news-page-image" data-aos="fade-up" data-aos-once="true" data-aos-duration="500" data-aos-offset="200">
                    <img src="./assets/image/news_stocks/1.png" />
                </div>
                <div class="news-page-content">
