--- a/stocks.html
+++ b/stocks.html
@@ -138,9 +138,9 @@
 
         <div class="stocks-page">
             <div class="stocks-page_wrap">
-                <h2 class="green" data-aos="fade-right" data-aos-duration="700" data-aos-offset="200">Акции</span></h2>
+                <h2 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">Акции</span></h2>
                 <div class="news-page-list">
-                    <div class="home-stocks-item" data-aos="fade-up" data-aos-duration="700" data-aos-offset="200">
+                    <div class="home-stocks-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">
                         <a href="#">
                             <div class="home-stock-img">
                                 <img src="./assets/image/home/stocks/1.png" />
@@ -153,7 +153,7 @@
                         </a>
                     </div>
 
-                    <div class="home-stocks-item" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
+                    <div class="home-stocks-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1000" data-aos-offset="200">
                         <a href="#">
                             <div class="home-stock-img">
                                 <img src="./assets/image/home/stocks/1.png" />
@@ -165,7 +165,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="home-stocks-item" data-aos="fade-up" data-aos-duration="700" data-aos-offset="200">
+                    <div class="home-stocks-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">
                         <a href="#">
                             <div class="home-stock-img">
                                 <img src="./assets/image/home/stocks/1.png" />
@@ -178,7 +178,7 @@
                         </a>
                     </div>
 
-                    <div class="home-stocks-item" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
+                    <div class="home-stocks-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1000" data-aos-offset="200">
                         <a href="#">
                             <div class="home-stock-img">
                                 <img src="./assets/image/home/stocks/1.png" />
