--- a/teachers.html
+++ b/teachers.html
@@ -137,7 +137,7 @@
 
         <div class="teachers-page">
             <div class="teachers-page_wrap">
-                <h2 class="green" data-aos="fade-right" data-aos-duration="700" data-aos-offset="200">Преподаватели</h2>
+                <h2 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">Преподаватели</h2>
                 <div class="teachers-menu">
                     <a class="teacher-link active" id="moscow">Москва</a>
                     <a class="teacher-link" id="novgorod">Нижний Новгород</a>
@@ -145,49 +145,49 @@
                 <div class="teachers-items">
                     <div class="moscow">
                         <div>
-                            <div class="teacher-item" data-aos="fade-up" data-aos-duration="500" data-aos-offset="200" >
+                            <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="500" data-aos-offset="200" >
                                 <img src="./assets/image/teacher/1.png" />
                                 <h4 class="red">ЯНА НЕМЧИНОВА</h4>
                                 <p>Исполнительный директор
                                     Smart Education</p>
                             </div>
-                            <div class="teacher-item" data-aos="fade-up" data-aos-duration="700" data-aos-offset="200">
+                            <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">
                                 <img src="./assets/image/teacher/2.png" />
                                 <h4 class="red">Мария суетнова</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
                             </div>
-                            <div class="teacher-item" data-aos="fade-up" data-aos-duration="900" data-aos-offset="200">
+                            <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="900" data-aos-offset="200">
                                 <img src="./assets/image/teacher/3.png" />
                                 <h4 class="red">карина мамонова</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
                             </div>
-                            <div class="teacher-item" data-aos="fade-up" data-aos-duration="1100" data-aos-offset="200">
+                            <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1100" data-aos-offset="200">
                                 <img src="./assets/image/teacher/4.png" />
                                 <h4 class="red">Анастасия сёмина</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
                             </div>
-                            <div class="teacher-item" data-aos="fade-up" data-aos-duration="500" data-aos-offset="200" >
+                            <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="500" data-aos-offset="200" >
                                 <img src="./assets/image/teacher/1.png" />
                                 <h4 class="red">ЯНА НЕМЧИНОВА</h4>
                                 <p>Исполнительный директор
                                     Smart Education</p>
                             </div>
-                            <div class="teacher-item" data-aos="fade-up" data-aos-duration="700" data-aos-offset="200">
+                            <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">
                                 <img src="./assets/image/teacher/2.png" />
                                 <h4 class="red">Мария суетнова</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
                             </div>
-                            <div class="teacher-item" data-aos="fade-up" data-aos-duration="900" data-aos-offset="200">
+                            <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="900" data-aos-offset="200">
                                 <img src="./assets/image/teacher/3.png" />
                                 <h4 class="red">карина мамонова</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
                             </div>
-                            <div class="teacher-item" data-aos="fade-up" data-aos-duration="1100" data-aos-offset="200">
+                            <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1100" data-aos-offset="200">
                                 <img src="./assets/image/teacher/4.png" />
                                 <h4 class="red">Анастасия сёмина</h4>
                                 <p>Преподаватель,
@@ -197,49 +197,49 @@
                     </div>
                     <div class="novgorod">
                         <div>
-                            <div class="teacher-item" data-aos="fade-up" data-aos-duration="500" data-aos-offset="200" >
+                            <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="500" data-aos-offset="200" >
                                 <img src="./assets/image/teacher/1.png" />
                                 <h4 class="red">ЯНА НЕМЧИНОВА</h4>
                                 <p>Исполнительный директор
                                     Smart Education</p>
                             </div>
-                            <div class="teacher-item" data-aos="fade-up" data-aos-duration="700" data-aos-offset="200">
+                            <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">
                                 <img src="./assets/image/teacher/2.png" />
                                 <h4 class="red">Мария суетнова</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
                             </div>
-                            <div class="teacher-item" data-aos="fade-up" data-aos-duration="900" data-aos-offset="200">
+                            <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="900" data-aos-offset="200">
                                 <img src="./assets/image/teacher/3.png" />
                                 <h4 class="red">карина мамонова</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
                             </div>
-                            <div class="teacher-item" data-aos="fade-up" data-aos-duration="1100" data-aos-offset="200">
+                            <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1100" data-aos-offset="200">
                                 <img src="./assets/image/teacher/4.png" />
                                 <h4 class="red">Анастасия сёмина</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
                             </div>
-                            <div class="teacher-item" data-aos="fade-up" data-aos-duration="500" data-aos-offset="200" >
+                            <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="500" data-aos-offset="200" >
                                 <img src="./assets/image/teacher/1.png" />
                                 <h4 class="red">ЯНА НЕМЧИНОВА</h4>
                                 <p>Исполнительный директор
                                     Smart Education</p>
                             </div>
-                            <div class="teacher-item" data-aos="fade-up" data-aos-duration="700" data-aos-offset="200">
+                            <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">
                                 <img src="./assets/image/teacher/2.png" />
                                 <h4 class="red">Мария суетнова</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
                             </div>
-                            <div class="teacher-item" data-aos="fade-up" data-aos-duration="900" data-aos-offset="200">
+                            <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="900" data-aos-offset="200">
                                 <img src="./assets/image/teacher/3.png" />
                                 <h4 class="red">карина мамонова</h4>
                                 <p>Преподаватель,
                                     филиал Митинский, г. Москва</p>
                             </div>
-                            <div class="teacher-item" data-aos="fade-up" data-aos-duration="1100" data-aos-offset="200">
+                            <div class="teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1100" data-aos-offset="200">
                                 <img src="./assets/image/teacher/4.png" />
                                 <h4 class="red">Анастасия сёмина</h4>
                                 <p>Преподаватель,
