--- a/tkt.html
+++ b/tkt.html
@@ -149,7 +149,7 @@
         <div class="course-name tkt-exam">
             <div class="course-name_wrap">
                 <div class="course-name-desc">
-                    <h1 class="orange" data-aos="fade-right" data-aos-duration="1000"><span class="green">Стань учителем</span><br />
+                    <h1 class="orange" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"><span class="green">Стань учителем</span><br />
                         международного<br />уровня</h1>
                     <p>Пройди курс подготовки к экзамену TKT онлайн</p>
                     <p>
@@ -162,19 +162,19 @@
             </div>
             <div class="course-name-list">
                 <div class="course-name-list_wrap">
-                    <div class="course-name-list_item orange_bg" data-aos="fade-up" data-aos-duration="500">
+                    <div class="course-name-list_item orange_bg" data-aos-once="true" data-aos="fade-up" data-aos-duration="500">
                         <p>Когда</p>
                         <h4>20 апреля – 15 мая</h4>
                     </div>
-                    <div class="course-name-list_item red_bg" data-aos="fade-up" data-aos-duration="800">
+                    <div class="course-name-list_item red_bg" data-aos-once="true" data-aos="fade-up" data-aos-duration="800">
                         <p>Формат обучения</p>
                         <h4>Видеолекции и практические занятия</h4>
                     </div>
-                    <div class="course-name-list_item blue_bg" data-aos="fade-up" data-aos-duration="1100">
+                    <div class="course-name-list_item blue_bg" data-aos-once="true" data-aos="fade-up" data-aos-duration="1100">
                         <p>Уровень английского</p>
                         <h4>Intermediate +</h4>
                     </div>
-                    <div class="course-name-list_item green_bg" data-aos="fade-up" data-aos-duration="1400">
+                    <div class="course-name-list_item green_bg" data-aos-once="true" data-aos="fade-up" data-aos-duration="1400">
                         <p>Документ на выходе</p>
                         <h4>Сертификат о прохождении курса</h4>
                     </div>
@@ -186,7 +186,7 @@
         <div class="course-skills tkt-exam">
             <div class="course-skills_wrap">
                 <div class="course-skills-items">
-                    <div class="course-skills-item" data-aos="fade-right" data-aos-offset="300"
+                    <div class="course-skills-item" data-aos="fade-right" data-aos-once="true" data-aos-offset="300"
                         data-aos-duration="1000">
                         <p><img src="./assets/image/tkt/skills/1.svg" alt=""></p>
                         <p>Международные преподаватели</p>
@@ -195,7 +195,7 @@
                             <li>Советы от экспертов по подготовке к кембриджским экзаменам</li>
                         </ul>
                     </div>
-                    <div class="course-skills-item" data-aos="fade-right" data-aos-offset="300" data-aos-duration="1500">
+                    <div class="course-skills-item" data-aos="fade-right" data-aos-once="true" data-aos-offset="300" data-aos-duration="1500">
                         <p><img src="./assets/image/tkt/skills/2.svg" alt=""></p>
                         <p>Удобный формат обучения</p>
                         <ul>
@@ -203,7 +203,7 @@
                             <li>Комфортный темп обучения и достаточное время для самостоятельной работы</li>
                         </ul>
                     </div>
-                    <div class="course-skills-item" data-aos="fade-right" data-aos-offset="300"
+                    <div class="course-skills-item" data-aos="fade-right" data-aos-once="true" data-aos-offset="300"
                         data-aos-duration="2000">
                         <p><img src="./assets/image/tkt/skills/3.svg" alt=""></p>
                         <p>Профессиональный рост</p>
@@ -239,19 +239,19 @@
         <!-- Course group description -->
         <div class="course-group-desc tkt-exam">
             <div class="course-group-desc_wrap">
-                <div class="course-group-desc-item" data-aos="fade-up" data-aos-duration="700" data-aos-offset="200">
+                <div class="course-group-desc-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">
                     <div>2,5 месяца</div>
                     <p>Обучение в формате видеолекций, онлайн уроков и выполнения практических заданий</p>
                 </div>
-                <div class="course-group-desc-item" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
+                <div class="course-group-desc-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1000" data-aos-offset="200">
                     <div>Умения и опыт</div>
                     <p>Вы получите необходимые знания и навыки для сдачи международного экзамена TKT</p>
                 </div>
-                <div class="course-group-desc-item" data-aos="fade-up" data-aos-duration="1300" data-aos-offset="200">
+                <div class="course-group-desc-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1300" data-aos-offset="200">
                     <div>Квалификация</div>
                     <p>Сертификат о прохождении курса TKT от Smart Education – аккредитованного центра Cambridge English по подготовке к международным экзаменам</p>
                 </div>
-                <div class="course-group-desc-item" data-aos="fade-up" data-aos-duration="1600" data-aos-offset="200">
+                <div class="course-group-desc-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1600" data-aos-offset="200">
                     <div>Карьера</div>
                     <p>Помощь в составлении продающего резюме и подготовке к собеседованию</p>
                 </div>
@@ -261,7 +261,7 @@
         <!-- Sertificaate description -->
         <div class="course-sert-desc">
             <div class="course-sert-desc_wrap">
-                <h2 class="blue" data-aos="fade-right" data-aos-duration="1000" data-aos-offset="200">Международный сертификат TKT нужен вам, <span class="red">если вы:</span></h2>
+                <h2 class="blue" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000" data-aos-offset="200">Международный сертификат TKT нужен вам, <span class="red">если вы:</span></h2>
                 <div class="course-sert-desc-text">
                     <div>
                         <ul>
@@ -271,7 +271,7 @@
                         </ul>
                         <p>Подготовка к тесту TKT укрепит вашу уверенность в себе как преподавателя и даст вам знания и умения, которые помогут вам построить свою карьеру.</p>
                     </div>
-                    <div><img data-aos="fade-up" data-aos-duration="700" data-aos-offset="200" src="./assets/image/tkt/sert-desc_illust.svg" /></div>
+                    <div><img data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200" src="./assets/image/tkt/sert-desc_illust.svg" /></div>
                 </div>
                 <div class="tab-item-about_attantion blue" >Тест TKT можно пройти независимо от имеющегося образования и опыта преподавания. Для его сдачи не требуется определенный уровень владения английским языком.</div>
             </div>
@@ -311,7 +311,7 @@
         <!-- Whom suit -->
         <div class="course-suit tkt-exam">
             <div class="course-suit_all-wrap">
-                <h2 class="green" data-aos="fade-right" data-aos-duration="300">Даем ли мы гарантию, что вы сдадите все модули экзамена?<br />
+                <h2 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="300">Даем ли мы гарантию, что вы сдадите все модули экзамена?<br />
                     <span class="red">Да, если:</span></h2>
                 <div class="course-suit-wrap">
                     <div class="course-suit-desc">
@@ -329,12 +329,12 @@
         <!-- How work -->
         <div class="course-work group-filial">
             <div class="course-work_wrap">
-                <h2 class="green" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000">Преподаватели
+                <h2 class="green" data-aos="fade-right" data-aos-once="true" data-aos-offset="200" data-aos-duration="1000">Преподаватели
                     курса</h2>
 
                 <div class="course-work-items">
 
-                    <div class="course-work-item" data-aos="fade-up" data-aos-offset="300" data-aos-duration="1000">
+                    <div class="course-work-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="300" data-aos-duration="1000">
                         <div class="course-work-photo"><img src="./assets/image/group-filial/work/1.png" alt="">
                         </div>
                         <div class="course-work-text">
@@ -347,7 +347,7 @@
                         </div>
                     </div>
 
-                    <div class="course-work-item" data-aos="fade-up" data-aos-offset="300" data-aos-duration="1300">
+                    <div class="course-work-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="300" data-aos-duration="1300">
                         <div class="course-work-photo"><img src="./assets/image/group-filial/work/2.png" alt="">
                         </div>
                         <div class="course-work-text">
@@ -360,7 +360,7 @@
                     </div>
 
 
-                    <div class="course-work-item" data-aos="fade-up" data-aos-offset="300" data-aos-duration="1600">
+                    <div class="course-work-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="300" data-aos-duration="1600">
                         <div class="course-work-photo"><img src="./assets/image/group-filial/work/3.png" alt="">
                         </div>
                         <div class="course-work-text">
@@ -381,9 +381,9 @@
         <!-- Course rates -->
         <div class="course-rates tkt-exam">
             <div class="course-rates_wrap">
-                <h2 class="green" data-aos="fade-right" data-aos-duration="700" data-aos-offset="300">Тарифы:</h2>
+                <h2 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="700" data-aos-offset="300">Тарифы:</h2>
                 <div class="course-rates-items">
-                    <div class="course-rates-item red_bg" data-aos="zoom-in" data-aos-offset="300"
+                    <div class="course-rates-item red_bg" data-aos-once="true" data-aos="zoom-in" data-aos-offset="300"
                         data-aos-duration="1000">
                         <h3>Базовый</h3>
                         <h3><span>3 990 ₽</span> вместо <s>5 200₽</s></h3>
@@ -393,7 +393,7 @@
                         <p>Поддержка куратора по техническим и организационным вопросам</p>
                         <a data-item="Старт">Хочу этот тариф</a>
                     </div>
-                    <div class="course-rates-item green_bg" data-aos="zoom-in" data-aos-offset="300"
+                    <div class="course-rates-item green_bg" data-aos-once="true" data-aos="zoom-in" data-aos-offset="300"
                         data-aos-duration="1500">
                         <h3>Оптима</h3>
                         <h3><span>7 990 ₽</span>  вместо <s>9 500₽</s></h3>
@@ -404,7 +404,7 @@
                         <p>Поддержка куратора по техническим и организационным вопросам</p>
                         <a data-item="Оптимальный">Хочу этот тариф</a>
                     </div>
-                    <div class="course-rates-item blue_bg" data-aos="zoom-in" data-aos-offset="300"
+                    <div class="course-rates-item blue_bg" data-aos-once="true" data-aos="zoom-in" data-aos-offset="300"
                         data-aos-duration="2000">
                         <h3>VIP</h3>
                         <h3><span>10 900 ₽</span> вместо <s>13 900₽</s></h3>
@@ -424,7 +424,7 @@
         <!-- F.A.Q. -->
         <div class="course-faq">
             <div class="course-faq_wrap">
-                <h2 class="green" data-aos="fade-right" data-aos-duration="1000" data-aos-offset="200">Частые вопросы:</h2>
+                <h2 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000" data-aos-offset="200">Частые вопросы:</h2>
                 <div class="course-faq-items">
                     <div class="course-faq-item" id="faq1">
                         <div class="course-faq-quest">
@@ -462,7 +462,7 @@
         <!-- Course reviews -->
         <div class="course-reviews">
             <div class="course-reviews_wrap">
-                <h2 data-aos="fade-right" data-aos-duration="1000" class="green">Что говорят наши клиенты</h2>
+                <h2 data-aos="fade-right" data-aos-once="true" data-aos-duration="1000" class="green">Что говорят наши клиенты</h2>
                 <div class="course-rewviews-slider">
                     <div>
                         <div class="course-reviews-item">
