--- a/filial.html
+++ b/filial.html
@@ -195,26 +195,26 @@
             <div class="home-teacher-wrap">
                 <h2 class="green">Преподаватели</h2>
                 <div class="home-teacher-slider">
-                    <div class="home-teacher-item" data-aos="fade-up" data-aos-offset="200" data-aos-duration="500">
+                    <div class="home-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="500">
                         <img src="./assets/image/home/teacher/1.png" />
                         <h4 class="red">ЯНА НЕМЧИНОВА</h4>
                         <p>Исполнительный директор
                             Smart Education</p>
                     </div>
-                    <div class="home-teacher-item" data-aos="fade-up" data-aos-offset="200" data-aos-duration="800">
+                    <div class="home-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="800">
                         <img src="./assets/image/home/teacher/2.png" />
                         <h4 class="red">Мария суетнова</h4>
                         <p>Преподаватель,
                             филиал Митинский, г. Москва
                         </p>
                     </div>
-                    <div class="home-teacher-item" data-aos="fade-up" data-aos-offset="200" data-aos-duration="1200">
+                    <div class="home-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1200">
                         <img src="./assets/image/home/teacher/3.png" />
                         <h4 class="red">карина мамонова</h4>
                         <p>Преподаватель,
                             филиал Митинский, г. Москва</p>
                     </div>
-                    <div class="home-teacher-item" data-aos="fade-up" data-aos-offset="200" data-aos-duration="1500">
+                    <div class="home-teacher-item" data-aos="fade-up" data-aos-once="true" data-aos-offset="200" data-aos-duration="1500">
                         <img src="./assets/image/home/teacher/4.png" />
                         <h4 class="red">Анастасия сёмина</h4>
                         <p>Преподаватель,
@@ -240,9 +240,9 @@
         <!-- Whom suit -->
         <div class="course-suit filial">
             <div class="course-suit_all-wrap">
-                <h2 class="green" data-aos="fade-right" data-aos-duration="300">Занятия в школе</h2>
+                <h2 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="300">Занятия в школе</h2>
                 <div class="course-suit-gallery">
-                    <div data-aos="zoom-in" data-aos-duration="1000">
+                    <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="1000">
                         <picture>
                             <source
                                 srcset="./assets/image/children-group/gallery/1x2.png 2x, ./assets/image/children-group/gallery/1.png 1x"
@@ -250,7 +250,7 @@
                             <img src="./assets/image/children-group/gallery/1.png" alt="">
                         </picture>
                     </div>
-                    <div data-aos="zoom-in" data-aos-duration="1300">
+                    <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="1300">
                         <picture>
                             <source
                                 srcset="./assets/image/children-group/gallery/2x2.png 2x, ./assets/image/children-group/gallery/2.png 1x"
@@ -258,7 +258,7 @@
                             <img src="./assets/image/children-group/gallery/1.png" alt="">
                         </picture>
                     </div>
-                    <div data-aos="zoom-in" data-aos-duration="1600">
+                    <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="1600">
                         <picture>
                             <source
                                 srcset="./assets/image/children-group/gallery/3x2.png 2x, ./assets/image/children-group/gallery/3.png 1x"
@@ -266,7 +266,7 @@
                             <img src="./assets/image/children-group/gallery/3.png" alt="">
                         </picture>
                     </div>
-                    <div data-aos="zoom-in" data-aos-duration="1900">
+                    <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="1900">
                         <picture>
                             <source
                                 srcset="./assets/image/children-group/gallery/4x2.png 2x, ./assets/image/children-group/gallery/4.png 1x"
@@ -298,9 +298,9 @@
         <!-- Course test -->
         <div class="course-test filial" >
             <div class="course-test_wrap">
-                <h2 data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000">Записаться на визит в школу
+                <h2 data-aos="fade-right" data-aos-once="true" data-aos-offset="200" data-aos-duration="1000">Записаться на визит<br />в школу
                 </h2>
-                <p data-aos="fade-up" data-aos-offset="250" data-aos-duration="1500"><a class="button_red_full"
+                <p data-aos="fade-up" data-aos-once="true" data-aos-offset="250" data-aos-duration="1500"><a class="button_red_full"
                         href="https://mrqz.me/5f58e9d98b67550044b35333">Записаться</a></p>
             </div>
         </div>
