--- a/inside_stock.html
+++ b/inside_stock.html
@@ -138,7 +138,7 @@
 
         <div class="stocks-page">
             <div class="stocks-page_wrap inside">
-               <div class="stocks-page-image" data-aos="fade-up" data-aos-duration="500" data-aos-offset="200">
+               <div class="stocks-page-image" data-aos="fade-up" data-aos-once="true" data-aos-duration="500" data-aos-offset="200">
                    <img src="./assets/image/news_stocks/1.png" />
                </div>
                <div class="stocks-page-content">
