--- a/teacher.html
+++ b/teacher.html
@@ -168,13 +168,13 @@
         <!-- Whom suit -->
         <div class="course-suit teacher">
             <div class="course-suit_all-wrap">
-                <h2 class="green" data-aos="fade-right" data-aos-duration="300">Образование и опыт</h2>
+                <h2 class="green" data-aos="fade-right" data-aos-once="true" data-aos-duration="300">Образование и опыт</h2>
                 <p>Московский Государственный лингвистический университет им. М.Тореза, 2011-2015, специализация Теория
                     и методика преподавания иностранных языков и культур, квалификация Лингвист, преподаватель
                     английского и немецкого языков.
                     CAE 2017, FCE 2011, TKT (3 Modules)</p>
                 <div class="course-suit-gallery">
-                    <div data-aos="zoom-in" data-aos-duration="1000">
+                    <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="1000">
                         <picture>
                             <source
                                 srcset="./assets/image/children-group/gallery/1x2.png 2x, ./assets/image/children-group/gallery/1.png 1x"
@@ -182,7 +182,7 @@
                             <img src="./assets/image/children-group/gallery/1.png" alt="">
                         </picture>
                     </div>
-                    <div data-aos="zoom-in" data-aos-duration="1300">
+                    <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="1300">
                         <picture>
                             <source
                                 srcset="./assets/image/children-group/gallery/2x2.png 2x, ./assets/image/children-group/gallery/2.png 1x"
@@ -190,7 +190,7 @@
                             <img src="./assets/image/children-group/gallery/1.png" alt="">
                         </picture>
                     </div>
-                    <div data-aos="zoom-in" data-aos-duration="1600">
+                    <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="1600">
                         <picture>
                             <source
                                 srcset="./assets/image/children-group/gallery/3x2.png 2x, ./assets/image/children-group/gallery/3.png 1x"
@@ -198,7 +198,7 @@
                             <img src="./assets/image/children-group/gallery/3.png" alt="">
                         </picture>
                     </div>
-                    <div data-aos="zoom-in" data-aos-duration="1900">
+                    <div data-aos="zoom-in" data-aos-once="true" data-aos-duration="1900">
                         <picture>
                             <source
                                 srcset="./assets/image/children-group/gallery/4x2.png 2x, ./assets/image/children-group/gallery/4.png 1x"
@@ -229,9 +229,9 @@
         <!-- Homepage feedback-->
         <div class="home-feedback teacher">
             <div class="home-feedback_wrap">
-                <h2 class="green" data-aos="fade-right" data-aos-offset="200">Отзывы выпускников курса</h2>
+                <h2 class="green" data-aos="fade-right" data-aos-once="true" data-aos-offset="200">Отзывы выпускников курса</h2>
                 <div class="home-feedback-items">
-                    <div class="home-feedback-item" data-aos="fade-up" data-aos-duration="700" data-aos-offset="200">
+                    <div class="home-feedback-item" data-aos-once="true" data-aos="fade-up" data-aos-duration="700" data-aos-offset="200">
                         <div class="home-feedback-ava">
                             <img src="./assets/image/home/feedback/1.png" />
                         </div>
@@ -249,7 +249,7 @@
                         </div>
                     </div>
 
-                    <div class="home-feedback-item" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
+                    <div class="home-feedback-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1000" data-aos-offset="200">
                         <div class="home-feedback-ava">
                             <img src="./assets/image/home/feedback/2.png" />
                         </div>
@@ -266,7 +266,7 @@
                         </div>
                     </div>
 
-                    <div class="home-feedback-item" data-aos="fade-up" data-aos-duration="700" data-aos-offset="200">
+                    <div class="home-feedback-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="700" data-aos-offset="200">
                         <div class="home-feedback-ava">
                             <img src="./assets/image/home/feedback/3.png" />
                         </div>
@@ -284,7 +284,7 @@
                         </div>
                     </div>
 
-                    <div class="home-feedback-item" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200">
+                    <div class="home-feedback-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="1000" data-aos-offset="200">
                         <div class="home-feedback-ava">
                             <img src="./assets/image/home/feedback/4.png" />
                         </div>
